# Transport

./: .env.example  .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/artifacts/: model_metrics.json
backend/data/reports/lagos/: average_fare.csv  average_fare.xlsx  distance_analysis.csv  distance_analysis.xlsx  prediction_summary.csv  prediction_summary.xlsx  summary_report.md  traffic_impact.csv  traffic_impact.xlsx  weather_impact.csv  weather_impact.xlsx
backend/data/reports/lagos/evaluation/: metrics_table.csv  metrics_table.xlsx  model_metrics.json  model_performance_summary.md
backend/scripts/: generate_synthetic_data.py  train_model.py
backend/scripts/lagos/: generate_dataset.py  run_analytics.py  run_evaluation.py  run_reports.py
backend/scripts/nyc_tlc/: README.md  __init__.py  config.py  eda.py  prepare_data.py
backend/src/lagos_fare/: __init__.py  config.py  dependencies.py  main.py
backend/src/lagos_fare/application/: exceptions.py
backend/src/lagos_fare/application/dto/: prediction_dto.py  trip_request_dto.py
backend/src/lagos_fare/domain/: exceptions.py
backend/src/lagos_fare/infrastructure/: __init__.py
backend/src/lagos_fare/presentation/: __init__.py
backend/tests/: conftest.py  helpers.py
backend/tests/api/: test_health_api.py  test_predictions_api.py  test_weather_api.py
backend/tests/integration/: test_prediction_flow.py
backend/tests/unit/: test_feature_builder.py  test_lagos_fare_engine.py  test_ml_model.py  test_predict_fare_use_case.py
docker/: Dockerfile.api  (+2 more)
(+76 files in other folders)
